apps/chat-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server
  labels:
    app: chat-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-server
  template:
    metadata:
      labels:
        app: chat-server
    spec:
      containers:
      - name: chat
        image: harbor.shoong.store/chat-backend/develop:17
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
